fixed distance from figures to text - no overflow

--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -41,8 +41,6 @@
                             width: 8rem;
                             height: 8rem;
                             background-color: transparent;
-                            margin: 1rem 1rem;
-                            // border: 1px solid white;
                             border-radius: 4px;
                             display: flex;
                             justify-content: flex-start;
