--- a/src/sass/components/presentation.scss
+++ b/src/sass/components/presentation.scss
@@ -174,6 +174,15 @@
                 left: 10%;
                 fill: none;
                 stroke: $color-orange;
+
+
+                @media only screen and (max-width: 700px) {
+                    top: 65%;
+                }
+
+                @media only screen and (max-width: 320px) {
+                    top: 70%;
+                }
             }
 
             .triangle-2 {
@@ -195,10 +204,10 @@
             animation: 12s ease-in-out 0s infinite alternate none running UpAndDown;
         
             .tree-2 {
-                width: 8rem;
+                width: 15rem;
                 position: absolute;
                 top: 50%;
-                left: 95%;
+                left: 92%;
                 fill: $color-blue;
             }
 
@@ -213,11 +222,21 @@
             .circle {
 
                 &-5 {
-                    width: 5rem;
+                    width: 15rem;
                     position: absolute;
                     top: 35%;
-                    left: 5%;
-                    fill: $color-pink;
+                    left: -5%;
+                    fill: $color-green;
+
+                    @media only screen and (max-width: 700px) {
+                        top: 25%;
+                        left: -20%;
+                    }
+
+                    @media only screen and (max-width: 320px) {
+                        top: 25%;
+                        left: -25%;
+                    }
                 }
 
                 &-6 {
